# tofunc

./: MANIFEST.in  Makefile  README.rst  pyproject.toml  run_tests.py
docs/: CNAME  index.html  v1.0.rst  v1.1.rst
src/tofunc/: __init__.py
src/tofunc/core/: __init__.py
src/tofunc/tests/: __init__.py  test_hello.py
