[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
description = "Convert any callable into a function."
keywords = []
name = "tofunc"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.0.dev0"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/tofunc/#files"
Index = "https://pypi.org/project/tofunc/"
Source = "https://github.com/johannes-programming/tofunc/"
Website = "https://tofunc.johannes-programming.online/"
