[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project allows converting any callable into a function."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "tofunc"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.1.3"

[project.urls]
Download = "https://pypi.org/project/tofunc/#files"
Index = "https://pypi.org/project/tofunc/"
Source = "https://github.com/johannes-programming/tofunc/"
Website = "https://tofunc.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
